Imported Upstream version 4.6.0