@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009 Matthew Hall and others.
+ * Copyright (c) 2009, 2015 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -26,6 +26,6 @@ public abstract class SingleSelectionIndexProperty extends
 
 	@Override
 	protected void doSetValue(Object source, Object value) {
-		super.doSetValue(source, value == null ? new Integer(-1) : value);
+		super.doSetValue(source, value == null ? Integer.valueOf(-1) : value);
 	}
 }
