@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2012 IBM Corporation and others.
+ * Copyright (c) 2003, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -79,7 +79,7 @@ public final class NavigatorContentServiceDescriptionProvider implements
 	protected final String getDefaultStatusBarMessage(int aSize) {
 		return NLS.bind(aSize != 1 ? CommonNavigatorMessages.Navigator_statusLineMultiSelect
 				: CommonNavigatorMessages.Navigator_statusLineSingleSelect,
-				new Object[] { new Integer(aSize) });
+				new Object[] { Integer.valueOf(aSize) });
 
 	}
 
