@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2006 IBM Corporation and others.
+ * Copyright (c) 2004, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -180,9 +180,6 @@ public final class ActionHandler extends AbstractHandler {
     }
 
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.commands.IHandler#execute(java.util.Map)
-     */
 	@Override
 	@Deprecated
     public Object execute(Map parameterValuesByName) throws ExecutionException {
@@ -210,9 +207,6 @@ public final class ActionHandler extends AbstractHandler {
         return action;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.commands.IHandler#getAttributeValuesByName()
-     */
 	@Override
 	@Deprecated
     public Map getAttributeValuesByName() {
@@ -244,7 +238,7 @@ public final class ActionHandler extends AbstractHandler {
         }
         map.put(ATTRIBUTE_HANDLED, handled ? Boolean.TRUE : Boolean.FALSE);
         map.put(ATTRIBUTE_ID, action.getId());
-        map.put(ATTRIBUTE_STYLE, new Integer(action.getStyle()));
+		map.put(ATTRIBUTE_STYLE, Integer.valueOf(action.getStyle()));
         return Collections.unmodifiableMap(map);
     }
 
@@ -262,9 +256,6 @@ public final class ActionHandler extends AbstractHandler {
         }
     }
 
-	/* (non-Javadoc)
-	 * @see java.lang.Object#toString()
-	 */
 	@Override
 	@Deprecated
 	public final String toString() {
