@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2006 IBM Corporation and others.
+ * Copyright (c) 2004, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -17,7 +17,7 @@ package org.eclipse.ui.internal;
  */
 public class IntModel extends Model {
     public IntModel(int initialValue) {
-        super(new Integer(initialValue));
+		super(Integer.valueOf(initialValue));
     }
 
     /**
@@ -27,7 +27,7 @@ public class IntModel extends Model {
      * @param newValue the new value of the integer
      */
     public void set(int newValue, IChangeListener source) {
-        setState(new Integer(newValue), source);
+		setState(Integer.valueOf(newValue), source);
     }
 
     /**
@@ -37,7 +37,7 @@ public class IntModel extends Model {
      * @param newValue the new value of the integer
      */
     public void set(int newValue) {
-        setState(new Integer(newValue), null);
+		setState(Integer.valueOf(newValue), null);
     }
 
     /**
