@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -190,8 +190,7 @@ public class WorkbenchPreferencePage extends PreferencePage implements
 		saveInterval.setPage(this);
 		saveInterval.setTextLimit(Integer.toString(MAX_SAVE_INTERVAL).length());
 		saveInterval.setErrorMessage(NLS.bind(
-				WorkbenchMessages.WorkbenchPreference_workbenchSaveIntervalError, new Integer(
-						MAX_SAVE_INTERVAL)));
+				WorkbenchMessages.WorkbenchPreference_workbenchSaveIntervalError, Integer.valueOf(MAX_SAVE_INTERVAL)));
 		saveInterval.setValidateStrategy(StringFieldEditor.VALIDATE_ON_KEY_STROKE);
 		saveInterval.setValidRange(0, MAX_SAVE_INTERVAL);
 
