@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2006 IBM Corporation and others.
+ * Copyright (c) 2004, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -12,7 +12,6 @@ package org.eclipse.ui.internal.preferences;
 
 import java.util.HashSet;
 import java.util.Set;
-
 import org.eclipse.core.runtime.Preferences;
 
 /**
@@ -32,25 +31,16 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         this.store = toConvert;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.internal.preferences.PropertyMapAdapter#attachListener()
-     */
     @Override
 	protected void attachListener() {
         store.addPropertyChangeListener(listener);
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.internal.preferences.PropertyMapAdapter#detachListener()
-     */
     @Override
 	protected void detachListener() {
         store.removePropertyChangeListener(listener);
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.internal.preferences.IPropertyMap#keySet()
-     */
     @Override
 	public Set keySet() {
         Set result = new HashSet();
@@ -66,9 +56,6 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         return result;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.internal.preferences.IPropertyMap#getValue(java.lang.String, java.lang.Class)
-     */
     @Override
 	public Object getValue(String propertyId, Class propertyType) {
         if (propertyType.isAssignableFrom(String.class)) {
@@ -88,7 +75,7 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Integer.class) {
-            return new Integer(store.getInt(propertyId));
+			return Integer.valueOf(store.getInt(propertyId));
         }
 
         if (propertyType == Long.class) {
@@ -98,17 +85,11 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         return null;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.internal.preferences.IPropertyMap#propertyExists(java.lang.String)
-     */
     @Override
 	public boolean propertyExists(String propertyId) {
         return store.contains(propertyId);
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.internal.preferences.IPropertyMap#setValue(java.lang.String, java.lang.Object)
-     */
     @Override
 	public void setValue(String propertyId, Object newValue) {
         if (newValue instanceof String) {
