@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2013 IBM Corporation and others.
+ * Copyright (c) 2005, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 490700
  *******************************************************************************/
 package org.eclipse.ui.internal.wizards.preferences;
 
@@ -148,7 +149,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		setButtonLayoutData(button);
 
-		button.setData(new Integer(id));
+		button.setData(Integer.valueOf(id));
 		button.setText(label);
 
 		if (defaultButton) {
@@ -171,9 +172,6 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		destinationNameField.add(value);
 	}
 
-	/**
-	 * (non-Javadoc) Method declared on IDialogPage.
-	 */
 	@Override
 	public void createControl(Composite parent) {
 		initializeDialogUnits(parent);
@@ -369,7 +367,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		selectAllButton = new Button(buttonComposite, SWT.PUSH);
 		selectAllButton.setText(PreferencesMessages.SelectionDialog_selectLabel);
-		selectAllButton.setData(new Integer(IDialogConstants.SELECT_ALL_ID));
+		selectAllButton.setData(Integer.valueOf(IDialogConstants.SELECT_ALL_ID));
 		setButtonLayoutData(selectAllButton);
 
 		SelectionListener listener = new SelectionAdapter() {
@@ -384,7 +382,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		deselectAllButton = new Button(buttonComposite, SWT.PUSH);
 		deselectAllButton.setText(PreferencesMessages.SelectionDialog_deselectLabel);
-		deselectAllButton.setData(new Integer(IDialogConstants.DESELECT_ALL_ID));
+		deselectAllButton.setData(Integer.valueOf(IDialogConstants.DESELECT_ALL_ID));
 		setButtonLayoutData(deselectAllButton);
 
 		listener = new SelectionAdapter() {
@@ -506,8 +504,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	protected boolean queryYesNoQuestion(String message) {
 		MessageDialog dialog = new MessageDialog(getContainer().getShell(),
 				PreferencesMessages.Question, (Image) null, message,
-				MessageDialog.NONE, new String[] { IDialogConstants.YES_LABEL,
-						IDialogConstants.NO_LABEL }, 0) {
+				MessageDialog.NONE, 0, IDialogConstants.YES_LABEL, IDialogConstants.NO_LABEL) {
 			@Override
 			protected int getShellStyle() {
 				return super.getShellStyle() | SWT.SHEET;
@@ -982,14 +979,9 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 									.toOSString());
 		}
 
-		final MessageDialog dialog = new MessageDialog(getContainer()
-				.getShell(), PreferencesMessages.Question, null, messageString,
-				MessageDialog.QUESTION, new String[] {
-						IDialogConstants.YES_LABEL,
-						IDialogConstants.YES_TO_ALL_LABEL,
-						IDialogConstants.NO_LABEL,
-						IDialogConstants.NO_TO_ALL_LABEL,
-						IDialogConstants.CANCEL_LABEL }, 0) {
+		final MessageDialog dialog = new MessageDialog(getContainer().getShell(), PreferencesMessages.Question, null,
+				messageString, MessageDialog.QUESTION, 0, IDialogConstants.YES_LABEL, IDialogConstants.YES_TO_ALL_LABEL,
+				IDialogConstants.NO_LABEL, IDialogConstants.NO_TO_ALL_LABEL, IDialogConstants.CANCEL_LABEL) {
 			@Override
 			protected int getShellStyle() {
 				return super.getShellStyle() | SWT.SHEET;
