@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2009 IBM Corporation and others.
+ * Copyright (c) 2006, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -39,8 +39,7 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 
 	@Override
 	public void handle(final StatusAdapter statusAdapter, int style) {
-		statusAdapter.setProperty(WorkbenchStatusDialogManager.HINT,
-				new Integer(style));
+		statusAdapter.setProperty(WorkbenchStatusDialogManager.HINT, Integer.valueOf(style));
 		if (((style & StatusManager.SHOW) == StatusManager.SHOW)
 				|| ((style & StatusManager.BLOCK) == StatusManager.BLOCK)) {
 
